<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mixx</string>
    <string name="app_title">#TapToRap</string>
    <string name="action_settings">Settings</string>
    <string name="song_name_placeholder">SongName</string>
    <string name="now_playing">Now Playing</string>
    <string name="song_name_label">Song Name</string>
    <string name="artist_label">Artist</string>
    <string name="time_zero">00:00</string>
    <string name="developed_by">Developed by</string>
    <string name="developer_name">Shristi Parmanandka</string>
    <string name="developer_email">shristiparmanandka@gmail.com</string>
    <string name="content_desc_back">Back</string>
    <string name="content_desc_search_lyrics">Search lyrics</string>
    <string name="content_desc_logo">App logo</string>
    <string name="content_desc_about">About</string>
    <string name="content_desc_play">Play</string>
    <string name="content_desc_pause">Pause</string>
    <string name="content_desc_replay">Replay</string>
    <string name="content_desc_forward">Forward</string>
    <string name="content_desc_rewind">Rewind</string>
    <string name="content_desc_album_art">Album art</string>
    <string name="content_desc_splash">Splash logo</string>

</resources>
