<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    tools:ignore="Overdraw">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:id="@+id/topBar"
        android:background="@color/accent_material_light"
        android:orientation="horizontal"
        android:elevation="5dp">

        <ImageButton
            android:layout_width="@dimen/abc_action_button_min_height_material"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/abc_dropdownitem_text_padding_left"
            android:src="@drawable/back"
            android:contentDescription="@string/content_desc_back"
            android:id="@+id/back"
            android:background="@android:color/transparent"
            android:onClick="viewList"
            />
        <ImageButton
            android:layout_width="@dimen/abc_action_button_min_height_material"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/abc_dropdownitem_text_padding_left"
            android:src="@drawable/search"
            android:contentDescription="@string/content_desc_search_lyrics"
            android:id="@+id/showLyrics"
            android:background="@android:color/transparent"
      android:layout_alignParentEnd="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now_playing"
            android:layout_toEndOf="@+id/back"
            android:layout_toStartOf="@+id/showLyrics"
            android:textColor="#ffffff"
            android:layout_centerVertical="true"
            android:textSize="@dimen/abc_action_bar_icon_vertical_padding_material"
            android:maxLines="1"
            android:ellipsize="end"
            tools:ignore="RelativeOverlap" />


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_name_label"
        android:singleLine="true"
        android:layout_marginTop="@dimen/abc_text_size_large_material"
        android:layout_marginStart="@dimen/abc_text_size_large_material"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/replay"
        android:textSize="25sp"
        android:textColor="#111111"
        android:id="@+id/songName"
        android:layout_marginBottom="@dimen/abc_dropdownitem_text_padding_left"
        android:layout_below="@+id/topBar"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist_label"
        android:layout_marginStart="@dimen/abc_text_size_large_material"
        android:singleLine="true"
        android:textSize="20sp"
        android:id="@+id/artistName"
        android:textColor="#999"
        android:layout_below="@+id/songName"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/replay"
        android:contentDescription="@string/content_desc_replay"
        android:layout_marginTop="@dimen/abc_text_size_large_material"
        android:layout_marginEnd="@dimen/abc_text_size_large_material"
        android:layout_below="@+id/topBar"
        android:layout_toStartOf="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:src="@drawable/replay"/>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/topBar"
        android:scaleType="fitXY"
        android:alpha=".30"
        android:id="@+id/album"
        android:contentDescription="@string/content_desc_album_art"
        android:src="@drawable/album"
/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        android:layout_margin="@dimen/abc_action_bar_icon_vertical_padding_material"
        android:layout_above="@+id/btnPlay"
        android:text="@string/time_zero"
        />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/textView1"
        android:layout_toStartOf="@+id/textView2"
        android:layout_above="@+id/btnPlay"
        android:layout_margin="@dimen/abc_dropdownitem_text_padding_left"
        android:id="@+id/seekBar1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_margin="@dimen/abc_action_bar_icon_vertical_padding_material"
        android:layout_above="@+id/btnPlay"
        android:layout_alignParentEnd="true"
        android:text="@string/time_zero"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRewind"
        android:contentDescription="@string/content_desc_rewind"
        android:layout_marginEnd="@dimen/abc_action_bar_icon_vertical_padding_material"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/abc_text_size_display_2_material"
        android:layout_toStartOf="@+id/btnPlay"
        android:background="@android:color/transparent"
        android:src="@drawable/rewind"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnPlay"
        android:contentDescription="@string/content_desc_play"
        android:layout_marginBottom="@dimen/abc_text_size_display_2_material"
        android:layout_centerInParent="true"
        android:backgroundTint="@android:color/holo_red_light"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"

        android:src="@drawable/play"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnPause"
        android:contentDescription="@string/content_desc_pause"
        android:layout_marginBottom="@dimen/abc_text_size_display_2_material"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:backgroundTint="@android:color/transparent"
        android:background="@android:color/transparent"
        android:src="@drawable/pause"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnForward"
        android:contentDescription="@string/content_desc_forward"
        android:layout_marginBottom="@dimen/abc_text_size_display_2_material"
        android:layout_marginStart="@dimen/abc_action_bar_icon_vertical_padding_material"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/btnPlay"
        android:background="@android:color/transparent"
        android:src="@drawable/forward"/>

</RelativeLayout>
